# clawgeeks-platform

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOY.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_tenants.py  002_auth_tables.py
dashboard/: Dockerfile  README.md  next.config.js  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/tenants/: page.tsx
dashboard/src/components/: Sidebar.tsx  StatsCard.tsx  TenantCard.tsx
dashboard/src/lib/: api.ts  types.ts
docs/: OPENHANDS_BEST_PRACTICES.md  OPENHANDS_INTEGRATION.md
provisioning/: __init__.py
provisioning/api/: advisor_routes.py  coding.py  hr_routes.py  main.py  mentor_routes.py  openapi.py  webhooks.py
provisioning/auth/: __init__.py  dependencies.py  models.py  routes.py  schemas.py  service.py
provisioning/db/: __init__.py  database.py  models.py  repository.py
provisioning/models/: __init__.py  tenant.py
provisioning/services/: __init__.py  agent_provisioner.py  billing.py  board_of_advisors.py  board_of_mentors.py  coolify.py  daytona_provisioner.py  hr_department.py  openhands.py  provisioner.py
provisioning/templates/: agent_roles.yaml  openclaw.yaml.j2
scripts/: generate_sdk.py
sdk/python/: README.md  pyproject.toml
sdk/python/clawgeeks_client/: __init__.py  client.py  models.py
sdk/typescript/: README.md  package.json  tsconfig.json
sdk/typescript/src/: client.ts  index.ts  types.ts
tests/: conftest.py  test_agent_provisioner.py  test_api_endpoints.py  test_auth.py  test_billing.py  test_board_of_advisors.py  test_board_of_mentors.py  test_hr_department.py  test_integration_e2e.py  test_provisioner.py  test_rbac.py  test_repository.py
