[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clawgeeks-client"
version = "0.3.0"
description = "ClawGeeks Platform API Client"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ClawGeeks", email = "dev@clawgeeks.com"}
]
keywords = ["clawgeeks", "openclaw", "api", "client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.21.0",
]

[project.urls]
Homepage = "https://clawgeeks.com"
Documentation = "https://docs.clawgeeks.com"
Repository = "https://github.com/clawgeeks/clawgeeks-platform"

[tool.setuptools.packages.find]
where = ["."]
include = ["clawgeeks_client*"]
